--- a/api/tour-card/models/tour-card.settings.json
+++ b/api/tour-card/models/tour-card.settings.json
@@ -56,6 +56,13 @@
     },
     "price": {
       "type": "string"
+    },
+    "combined": {
+      "type": "boolean"
+    },
+    "link": {
+      "type": "string",
+      "default": "/"
     }
   }
 }
