--- a/api/about/models/about.settings.json
+++ b/api/about/models/about.settings.json
@@ -216,6 +216,17 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "headerBackground": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
